--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
- host: 127.0.0.1
+ host: 192.168.1.156
  port: 21
- user: wooram.you
- password: 1234
+ user: admin
+ password: admin
+ remotePath: /
