--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
 
     "mongoose": "^7.0.2",
 
-    "nodemon": "^2.0.21",
+    "nodemon": "^2.0.22",
 
     "path": "^0.12.7",
 
     "ts-node": "^10.9.1",
+
+    "ts-node-dev": "^2.0.0",
 
     "typescript": "^5.0.2"
 
